--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
+    "@react-three/gltfjsx": "^4.3.4",
+    "@types/three": "^0.174.0",
     "less": "^4.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "three": "^0.174.0",
     "vite-plugin-pages": "^0.32.5"
   },
   "devDependencies": {
