--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,11 +16,13 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
+    "strict": false,
+    "noImplicitAny": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
+
   },
   "include": ["src"]
 }
