--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.1.0",
     "@react-three/gltfjsx": "^4.3.4",
     "@types/three": "^0.174.0",
+    "antd": "^5.24.5",
     "gsap": "^3.12.7",
     "less": "^4.2.2",
     "react": "^19.0.0",
