--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,13 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "types": ["vite-plugin-pages/client"]
+    "types": ["vite-plugin-pages/client"],
+    // 解析非相对模块名的基准目录
+    "baseUrl": "./",
+    // 模块名到基于 baseUrl 的路径映射的列表
+    "paths": {
+      "@/*": ["src/*"],
+      "#/*": ["types/*"]
+    }
   }
 }
