--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.24.5",
     "gsap": "^3.12.7",
     "less": "^4.2.2",
+    "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
